HashMapImpl::rehash() should use a version of jsMapHash that cannot throw. https://bugs.webkit.org/show_bug.cgi?id=224610 rdar://76698910

Reviewed by Yusuke Suzuki.

JSTests:

* stress/suppress-TerminationException-in-HashMapImpl-rehash.js: Added.

Source/JavaScriptCore:

For context, HashMapImpl::rehash()'s rehash operation relies on jsMapHash().
jsMapHash() can be interrupted by a TerminationException, and as a result, may
not return the string hash we are expecting.  This in turn can lead to the
rehash operation hashing with wrong keys.

However, all the keys should have already been hashed.  Hence, rehash() should
never see an exception thrown there.  We can avoid this complication with the
TerminationException by simply calling an alternate version of jsMapHash() that
is guaranteed to never throw e.g. a jsMapHashForAlreadyHashedValue() function.

* runtime/ExceptionHelpers.h:
* runtime/HashMapImplInlines.h:
(JSC::jsMapHashImpl):
(JSC::jsMapHash):
(JSC::jsMapHashForAlreadyHashedValue):
(JSC::HashMapImpl<HashMapBucketType>::rehash):



Canonical link: https://commits.webkit.org/236606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276106 268f45cc-cd09-0410-ab3c-d52691b4dbfc